--- a/bugreports.yml
+++ b/bugreports.yml
@@ -181,8 +181,8 @@
   actual-result: |
     Отсутствует возможность обнулить все фильтры
 
- summary: |
-    В фильтре присутствуют бренды не связанные с текущей категорией
+- summary: |
+   В фильтре присутствуют бренды не связанные с текущей категорией
   environment: |
    v1, ubuntu 22.04, chrome
   steps-to-reproduce: |
@@ -193,7 +193,7 @@
   actual-result: |
     Присутствуют все бренды не связанные с текущей категорией
 
- summary: |
+- summary: |
     В фильтре не обнуляются выбранные ранее бренды не связанные с текущей категорией
   environment: |
    v1, ubuntu 22.04, chrome
@@ -206,7 +206,7 @@
   actual-result: |
     Товары не отображаются, в фильтрации используются "бренды" не связанные с текущей категорией
 
- summary: |
+- summary: |
     В описании товара не меняется перевод при смене языка на ru
   environment: |
    v1, ubuntu 22.04, chrome
@@ -218,7 +218,7 @@
   actual-result: |
     Описание товара на английском языке
 
- summary: |
+- summary: |
     В корзине не выводится сообщение при отсутствии товаров
   environment: |
    v1, ubuntu 22.04, chrome
@@ -230,7 +230,7 @@
   actual-result: |
     Сообщение отсутствует
 
- summary: |
+- summary: |
     Отсутствуют подтверждения действий при оформлении товара и очистке корзины
   environment: |
    v1, ubuntu 22.04, chrome
@@ -244,7 +244,7 @@
   actual-result: |
     Действия не требуются подтверждения, при оформлении товара возникает модальное окно с "успешным оформлением"
 
- summary: |
+- summary: |
     Настройки фильтра не сохраняются после перезагрузки страницы
   environment: |
    v1, ubuntu 22.04, chrome
@@ -257,7 +257,7 @@
   actual-result: |
     Фильтры не сохранились после перезагрузки
 
- summary: |
+- summary: |
     В карточках товара отсутствует надпись для кол-ва оставшегося товара
   environment: |
    v1, ubuntu 22.04, chrome
@@ -269,7 +269,7 @@
   actual-result: |
     Отсутствует обозначение/лейбл кол-ва товара на складе в карточках и при подробном просмотре товара
 
- summary: |
+- summary: |
     На главной странице неактивна ссылка для перехода по лого магазина
   environment: |
    v1, ubuntu 22.04, chrome
