--- a/regress-report.yml
+++ b/regress-report.yml
@@ -522,7 +522,7 @@ test-cases:
 	  actual-result: |
 	    Присутствуют категории и бренды привязанные к текущей страницы каталога
 
-	 summary: |
+	- summary: |
 	    В фильтре присутствуют бренды не связанные с текущей категорией
 	  environment: |
 	   v2, ubuntu 22.04, chrome
@@ -534,7 +534,7 @@ test-cases:
 	  actual-result: |
 	    Присутствуют все бренды не связанные с текущей категорией
 
-	 summary: |
+	- summary: |
 	    В описании товара не меняется перевод при смене языка на ru
 	  environment: |
 	   v2, ubuntu 22.04, chrome
@@ -546,7 +546,7 @@ test-cases:
 	  actual-result: |
 	    Описание товара на английском языке
 
-	 summary: |
+	- summary: |
 	    В корзине не выводится сообщение при отсутствии товаров
 	  environment: |
 	   v2, ubuntu 22.04, chrome
@@ -558,7 +558,7 @@ test-cases:
 	  actual-result: |
 	    Сообщение отсутствует
 
-	 summary: |
+	- summary: |
 	    В карточках товара отсутствует надпись для кол-ва оставшегося товара
 	  environment: |
 	   v2, ubuntu 22.04, chrome
@@ -570,7 +570,7 @@ test-cases:
 	  actual-result: |
 	    Отсутствует обозначение/лейбл кол-ва товара на складе в карточках и при подробном просмотре товара
 
-	 summary: |
+	- summary: |
 	    Отсутствуют подтверждения действий при оформлении товара и очистке корзины
 	  environment: |
 	   v2, ubuntu 22.04, chrome
@@ -584,7 +584,7 @@ test-cases:
 	  actual-result: |
 	    Действия не требуются подтверждения, при оформлении товара возникает модальное окно с "успешным оформлением"
 
-	 summary: |
+	- summary: |
 	    Настройки фильтра не сохраняются после перезагрузки страницы
 	  environment: |
 	   v2, ubuntu 22.04, chrome
