--- a/regress-report.yml
+++ b/regress-report.yml
@@ -1,53 +1,51 @@
 ---
 test-cases:
-  - summary: |
-	    Просмотр содержимого на странице открытого товара
-	  requirement: |
-	    Пользователь должен иметь возможность просматривать товары и просматривать подробную информацию о товаре.
-	  prerequisites: |
-	    Открыта страница store
-	  test-data: |
-	    ---------
-	  steps:
-	    - Выбрать любой товар и нажать на его фото
-	  expected-result: |
-	    Открыта страница с товарами, после перехода на страницу выбранного товара отображаются:
-	    	- цена
-	    	- кол-во оставшегося товара
-	    	- скидка при наличии
-	    	- рейтинг товара
-	    	- описание товара
-	    	- кнопка добавить в корзину
-	    	- хештег типа товара
-	    	
-	    	    	
-	- summary: |
-	    Переключение фото на странице с товаром
-	  requirement: |
-	    Пользователь должен иметь возможность просматривать товары и просматривать подробную информацию о товаре.
-	  prerequisites: |
-	    Открыта страница store
-	  test-data: |
-	    ---------
-	  steps:
-	    - Выбрать любой товар и нажать на его фото
-	    - Нажать на одно из фото из списка
-	  expected-result: |
-	    Главное фото изменилось на выбранное
+- summary: |
+    содержимого на странице открытого товара
+  requirement: |
+    Пользователь должен иметь возможность просматривать товары и просматривать подробную информацию о товаре.
+  prerequisites: |
+    Открыта страница store
+  test-data: |
+    ---------
+  steps:
+    - Выбрать любой товар и нажать на его фото
+  expected-result: |
+    Открыта страница с товарами, после перехода на страницу выбранного товара отображаются:
+    - цена
+    - кол-во оставшегося товараs
+    - скидка при наличии
+    - рейтинг товара
+    - описание товара
+    - кнопка добавить в корзину
+    - хештег типа товара
+	    		
+- summary: |
+    Переключение фото на странице с товаром
+  requirement: |
+    Пользователь должен иметь возможность просматривать товары и просматривать подробную информацию о товаре.
+  prerequisites: |
+    Открыта страница store
+  test-data: |
+    ---------
+  steps:
+    - Выбрать любой товар и нажать на его фото
+    - Нажать на одно из фото из списка
+  expected-result: |
+  Главное фото изменилось на выбранное
 	     
-	     
-	- summary: |
-	    Поиск товара по категории
-	  requirement: |
-	    Пользователь должен иметь возможность искать товары по ключевому слову или категории.
-	  prerequisites: |
+- summary: |
+   Поиск товара по категории
+  requirement: |
+   Пользователь должен иметь возможность искать товары по ключевому слову или категории.
+  prerequisites: |
 	    Открыта страница store
-	  test-data: |
+	test-data: |
 	    ---------
-	  steps:
+	steps:
 	    - Нажать на дропдаун "Category/Категории"
 	    - Выбрать любую категорию
-	  expected-result: |
+	expected-result: |
 	     На текущей странице отображаются товары относящиеся к выбранной категории
 	     
 	- summary: |
