--- a/regress-report.yml
+++ b/regress-report.yml
@@ -1,28 +1,377 @@
 ---
-
 test-cases:
-  - summary: |
-      содержимого на странице открытого товара
-    requirement: >
-      Пользователь должен иметь возможность просматривать товары и просматривать
-      подробную информацию о товаре.
-    prerequisites: |
-      Открыта страница store
-    test-data: |
-      ---------
-    steps:
-      - Выбрать любой товар и нажать на его фото
-    expected-result: "\"Открыта страница с товарами, после перехода на страницу выбранного товара отображаются:\n \t    - цена\n \t    - кол-во оставшегося товараs\n \t    - скидка при наличии\n \t    - рейтинг товара\n \t    - описание товара\n \t    - кнопка добавить в корзину\n \t    - хештег типа товара\"\n"
+
+- summary: |
+    Просмотр содержимого на странице открытого товара
+  status: pass
+
+- summary: |
+    Переключение фото на странице с товаром
+  status: fail
+
+- summary: |
+    Добавление товара в корзину
+  status: pass
+
+- summary: |
+    Поиск товара по ключевому слову
+  status: pass
+
+- summary: |
+    Поиск товара с пустым полем для поиска
+  status: pass
+
+- summary: |
+    Поиск по ключевому слову с несуществующим названием товара
+  status: fail
+  
+- summary: |
+    Поиск c активными фильтрами
+  status: pass
+ 
+- summary: |
+    Поиск c по одному символу
+  status: fail
+
+- summary: |
+    Поиск товара по категории
+  status: pass
+
+- summary: |
+    Поиск товара по пустой категории
+  status: fail
+
+- summary: |
+    Фильтрация отображаемых на странице товаров по бренду
+  status: pass
+  
+- summary: |
+    Фильтрация категории и бренда отображаемых товарв
+  status: pass  
+  
+- summary: |
+    Фильтрация товаров по цене с положительными числами
+  status: fail
+  
+- summary: |
+    Фильтрация товаров по цене с учетом скидки
+  status: fail
+  
+- summary: |
+    Фильтрация товаров по цене с отрицательными числами
+  status: fail
+  
+- summary: |
+    Фильтрация товаров по цене с числами через точку
+  status: pass 
+  
+- summary: |
+    Фильтрация товаров по цене с числами через запятую
+  status: pass 
+  
+- summary: |
+    Фильтрация товаров по цене от 0
+  status: pass
+  
+- summary: 
+    Поиск в диапазоне с ведущими нулями
+  status: pass 
+  
+- summary: |
+    Ввод не числовых значений в поле для поиска
+  status: pass
+
+- summary: |
+    Фильтрация отображаемых на странице товаров в наличии используя все фильтры
+  status: pass
+
+- summary: |
+    Фильтрация товаров отсутствующих в наличии на складе
+  status: fail
+
+- summary: |
+    Наличие адаптива мод мобильные устройства
+  status: fail
+
+- summary: |
+    Работа сайта при большом количестве одновременных запросах
+  status: fail
+  
+- summary: |
+    Оформление добавленного в корзину товара
+  status: pass
+  
+- summary: |
+    Наличие запросов без ошибок на сервер при соответствующих действиях
+  status: fail
+  
+- summary: |
+    Наличие всех категорий и брендов в фильтре при первичной загрузке сайта
+  status: fail
+  
+- summary: |
+    Блокировка кнопок пагинации с содержимым на одну страницу
+  status: pass
+  
+- summary: |
+    Обнуление значений всех фильтров
+  status: fail
+  
+- summary: |
+    Отсутствие брендов несвязанных с выбранной категорией
+  status: fail
+
+- summary: |
+    Смена категории при наличии выбранных брендов
+  status: fail
+
+- summary: |
+    Сохранение выбранных брендов между категориями
+  status: fail
+ 
+- summary: |
+    Смена языка веб-магазина
+  status: fail  
+ 
+- summary: |
+    Удаление одного товара из корзины
+  status: pass
+ 
+- summary: |
+    Наличие информации о добавленных товарах в корзине
+  status: pass
+ 
+- summary: |
+    Сообщение при отсутствии товаров в корзине
+  status: fail
+ 
+- summary: |
+    Подтверждение действий при удалении/оформлении товара
+  status: fail 
+ 
+- summary: |
+    Сохранение данных фильтров при обновлении/перезагрузки страницы
+  status: fail
+
 bugreports:
-  - summary: |
-      В фильтре не работает выборка по бренду при пустой категории
-    environment: |
-      v2, ubuntu 22.04, chrome
-    steps-to-reproduce: |
-      - Выбрать пустую категорию
-      - Выбрать любой бренд
-    expected-result: |
-      Отображаются товары выбранного бренда
-    actual-result: |
-      Товары в каталоге не отфильтрованы, отображаются все доступные товары
+- summary: |
+    В фильтре не работает выборка по бренду при пустой категории
+  environment: |
+    v2, ubuntu 22.04, chrome
+  steps-to-reproduce: |
+    - Выбрать пустую категорию
+    - Выбрать любой бренд
+  expected-result: |
+    Отображаются товары выбранного бренда
+  actual-result: |
+    Товары в каталоге не отфильтрованы, отображаются все доступные товары
+
+- summary: |
+    В каталоге отсутствуют кнопки пагинации при пустой категории в фильтре
+  environment: |
+    v2, ubuntu 22.04, chrome
+  steps-to-reproduce: |
+    - Выбрать пустую категорию
+    - Перейти к каталогу
+  expected-result: |
+    Кнопки пагинации активны и переключают страницы
+  actual-result: |
+    Кнопки не отображаются, переключение невозможно
+
+- summary: |
+   В каталоге карточка товара сжимается при наличии менее 3х товаров на странице
+  environment: |
+   v2, ubuntu 22.04, chrome
+  steps-to-reproduce: |
+   - Вести в поиск iphone 9
+  expected-result: |
+   Карточка не сжимается, верстка выглядит по шаблону
+  actual-result: |
+   Карточка сжата, кнопка выходит за границы карточки товара
+
+- summary: |
+    В фильтре игнорируются все настройки при отсутствии совпадений товара
+  environment: |
+    v2, ubuntu 22.04, chrome
+  steps-to-reproduce: |
+    - Выбрать любую категорию и бренд
+    - Ввести произвольные символы в поиск
+    - Очистить все фильтры
+    - Ввести в цен до: -1000
+    - Повторить шаг 3 и выбрать товары не в наличии
+  expected-result: |
+    2 - Товар не найден, каталог пуст
+    4 - Цена игнорируется, отображаются все товары
+    5 - Указаны все товары отсутствующие в наличии
+  actual-result: |
+    Каталог содержит все товары без фильтров
+- summary: |
+    В фильтре цен, поле "до" подсчитывает цену строгим равенством
+  environment: |
+    v2, ubuntu 22.04, chrome
+  steps-to-reproduce: |
+    - Ввести в поле цены после - 50
+    - Ввести в поле цены до - 899
+  expected-result: |
+    Отображаются все товары с ценой в диапазоне от 1 до 899(включительно)
+  actual-result: |
+    Отображаются все товары с ценой в диапазоне от 1 до 899(не включительно)
+- summary: |
+    Поиск по диапазону цен не учитывает скидку
+  environment: |
+    v2, ubuntu 22.04, chrome
+  steps-to-reproduce: |
+    - Ввести в поле цены после - 100
+    - Ввести в поле цены до - 1000
+  expected-result: |
+    Отображаются все товары от 100 - 1000, с учетом скидки
+  actual-result: |
+    Отображаются все товары от 100 - 1000 учитывая оригинальную цену без скидки
+- summary: |
+    Приложение не адаптировано под мобильные устройства
+  environment: |
+    v2, ubuntu 22.04, chrome
+  steps-to-reproduce: |
+    - Открыть страницу store на мобильном устройстве
+  expected-result: >
+    Верстка подстривается под мобильное устройство, меню фильтра изначально в
+    виде меню "бургер"
+  actual-result: >
+    Фильтр не использует "бургер" меню, кнопки в корзине склеены и текст цены не
+    выровнен
+- summary: |
+    В каталоге не прогружаются фото товаров при большом трафике
+  environment: |
+    v2, ubuntu 22.04, chrome
+  steps-to-reproduce: |
+    - Открыть страницу store
+    - Отправить множество одновременных запросов не переключение страницы
+  expected-result: >
+    Приложение масштабируется и продолжает свою работу в обычном режиме, все
+    элементы прогружаются
+  actual-result: |
+    Фотографии товаров в каталоге не прогружены
+- summary: |
+    В каталоге кнопки предыдущая/следующая переключают категории фильтра
+  environment: |
+    v2, ubuntu 22.04, chrome
+  steps-to-reproduce: |
+    - Открыть страницу store
+    - Нажать на кнопку "следующая"
+    - Нажать на кнопку "предыдущая" 
+  expected-result: |
+    Фильтры не привязаны к пагинации и не переключаются вместе со страницей
+  actual-result: >
+    Фильтры переключаются вместе со страницами и привязаны к текущей страницы в
+    каталоге
+- summary: |
+    В фильтре отсутствует возможность сбросить все настройки
+  environment: |
+    v2, ubuntu 22.04, chrome
+  steps-to-reproduce: |
+    - Открыть страницу store
+  expected-result: |
+    У фильтра присутствует кнопка "сбросить все" для обуления настроек
+  actual-result: |
+    Отсутствует возможность обнулить все фильтры
+- summary: |
+    В корзине возникает ошибка запроса на сервер при оформлении товара
+  environment: |
+    v2, ubuntu 22.04, chrome
+  steps-to-reproduce: |
+    - Открыть страницу store
+    - Добавить любой товар из каталога и перейти в корзину
+    - Нажать "оформить заказ"
+  expected-result: |
+    Заказ успешно оформлен, запрос на сервер отправлен без ошибки (post 301)
+  actual-result: >
+    Возникло модальное окно с успешным оформлением товара при наличии ошибки
+    500,
+
+    запрос отправлен не неверный адрес https://dummyjson.com/http/500/failed
+     
+- summary: |
+    В фильтрах отсутствуют все категории и бренды по умолчанию
+  environment: |
+    v2, ubuntu 22.04, chrome
+  steps-to-reproduce: |
+    - Открыть страницу store
+    - Открыть список категорий
+  expected-result: |
+    Присутствуют все категории и бренды имеющиеся в каталоге веб-магазина
+  actual-result: |
+    Присутствуют категории и бренды привязанные к текущей страницы каталога
+- summary: |
+    В фильтре присутствуют бренды не связанные с текущей категорией
+  environment: |
+    v2, ubuntu 22.04, chrome
+  steps-to-reproduce: |
+    - Открыть страницу store
+    - Выбрать любую категорию
+  expected-result: >
+    Бренды обновились, присутствуют только бренды связанные с выбранной
+    категорией товаров
+  actual-result: |
+    Присутствуют все бренды не связанные с текущей категорией
+- summary: |
+    В описании товара не меняется перевод при смене языка на ru
+  environment: |
+    v2, ubuntu 22.04, chrome
+  steps-to-reproduce: |
+    - Открыть страницу store
+    - Сменить язык на RU
+  expected-result: |
+    Описание товара переведено на русский язык
+  actual-result: |
+    Описание товара на английском языке
+- summary: |
+    В корзине не выводится сообщение при отсутствии товаров
+  environment: |
+    v2, ubuntu 22.04, chrome
+  steps-to-reproduce: |
+    - Открыть страницу store
+    - Перейти в корзину (и очистить если имеется товар)
+  expected-result: |
+    Выведено сообщение "Ваша корзина пуста"
+  actual-result: |
+    Сообщение отсутствует
+- summary: |
+    В карточках товара отсутствует надпись для кол-ва оставшегося товара
+  environment: |
+    v2, ubuntu 22.04, chrome
+  steps-to-reproduce: |
+    - Открыть страницу store
+    - Открыть страницу любого товара
+  expected-result: >
+    В каталоге и на странице с товаром присутствует лейбл для кол-ва оставшегося
+    товара
+  actual-result: >
+    Отсутствует обозначение/лейбл кол-ва товара на складе в карточках и при
+    подробном просмотре товара
+- summary: |
+    Отсутствуют подтверждения действий при оформлении товара и очистке корзины
+  environment: |
+    v2, ubuntu 22.04, chrome
+  steps-to-reproduce: |
+    - Открыть страницу store
+    - Добавить любой товар в корзину и перейти в нее
+    - Нажать на "оформить товар" и закрыть модальное окно
+    - Нажать на "очистить корзину"
+  expected-result: |
+    Всплывает модальное окно для подтверждения действий
+  actual-result: >
+    Действия не требуются подтверждения, при оформлении товара возникает
+    модальное окно с "успешным оформлением"
+- summary: |
+    Настройки фильтра не сохраняются после перезагрузки страницы
+  environment: |
+    v2, ubuntu 22.04, chrome
+  steps-to-reproduce: |
+    - Открыть страницу store
+    - Выбрать произвольные настройки фильтра
+    - Обновить страницу
+  expected-result: |
+    Выбранные ранее фильтры сохранились после перезагрузки
+  actual-result: |
+    Фильтры не сохранились после перезагрузки
 
